partiql-ast/tests/snapshots/pretty__pretty_typed_lits1.snap
---
source: partiql-ast/tests/pretty.rs
expression: doc
---
========================================================================================================================================================================================================
TIME WITH TIME ZONE '23:59:59.1234567890+18:00'
========================================================================================================================================================================================================

------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
TIME WITH TIME ZONE '23:59:59.1234567890+18:00'

------------------------------------------------------------------------------------------------------------------------
TIME WITH TIME ZONE '23:59:59.1234567890+18:00'

--------------------------------------------------------------------------------
TIME WITH TIME ZONE '23:59:59.1234567890+18:00'

----------------------------------------
TIME WITH TIME ZONE '23:59:59.1234567890+18:00'

------------------------------
TIME WITH TIME ZONE '23:59:59.1234567890+18:00'

--------------------
TIME WITH TIME ZONE '23:59:59.1234567890+18:00'

----------
TIME WITH TIME ZONE '23:59:59.1234567890+18:00'
